# connect4

./: .gitignore  bun.lockb  lefthook.yml  next.config.mjs  package-lock.json  package.json
.github/: dependabot.yml
src/app/: layout.tsx
src/app/vsAI/: page.tsx
src/components/Molecules/: Board.tsx
src/const/: board.ts
wasm/: Cargo.toml  README.md  init_q_table.json  red_q_table.json  yellow_q_table.json
wasm/src/: board.rs  lib.rs  q_learning.rs
